--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ py==1.11.0
 pydantic==1.8.2
 pyparsing==3.0.6
 pytest==6.2.5
+python-dotenv==0.19.2
 requests==2.26.0
 sniffio==1.2.0
 starlette==0.16.0
